docs: Add v1.0_Chinese.md

--- a/src/ExSpans/ExSpans.html
+++ b/src/ExSpans/ExSpans.html
@@ -86,10 +86,10 @@
 <li><code>ExMemoryExtensions</code>: Provides extension methods for the span-related types, such as ExSpan<t> and ReadOnlyExSpan<t>. It can be regarded as the MemoryExtensions of nint index range (提供跨度相关类型的扩展方法，例如 ExSpan<t> 和 ReadOnlyExSpan<t>. 它可以被视为 nint 索引范围的 MemoryExtensions).</t></t></t></t></li>
 <li><code>ExNativeMemory</code>: This class contains methods that are mainly used to manage native memory. It can enable early versions NET can also use the method of <see cref="NativeMemory"></see>, which will revert back to the implementation of <see cref="Marshal.AllocHGlobal(IntPtr)"></see> (此类包含了主要用于管理本机内存的方法. 它能使早期版本的 .NET 也能使用 <see cref="NativeMemory"></see> 的方法, 此时会回退为 <see cref="Marshal.AllocHGlobal(IntPtr)"></see> 的实现).</li>
 </ul>
-<h2 id="documentation">Documentation</h2>
+<h2 id="see-more">See more</h2>
 <ul>
 <li>Online document: <a href="https://zyl910.github.io/ExSpans_doc/">https://zyl910.github.io/ExSpans_doc/</a></li>
-<li>DocFX: Run <code>docfx_serve.bat</code>. Then browse http://localhost:8080/ .</li>
+<li>Source code: <a href="https://github.com/zyl910/ExSpans">https://github.com/zyl910/ExSpans</a></li>
 </ul>
 
 </article>
