docs: Update README.md .

--- a/README.html
+++ b/README.html
@@ -302,7 +302,7 @@ byteSpan.Count(): 2 // 0x2
 <h3 id="manipulating-memory-mapped-files-with-exspan-使用-exspan-操作内存映射文件">Manipulating Memory Mapped Files with ExSpan (使用 ExSpan 操作内存映射文件)</h3>
 <p>Because of the cumbersome way of manipulating data in memory-mapped files, I had hoped to use Span to manipulate memory-mapped files. However, memory-mapped files use 64-bit index, and Span's 32-bit index is not sufficient (由于内存映射文件的数据操作方法用起来比较繁琐, 曾经希望能用 Span 来操作内存映射文件. 但内存映射文件用了 64位索引, Span的32索引力不从心).</p>
 <p>Now ExSpan uses a range of nint index, which are 64-bit on 64-bit operating systems, and are very suitable for memory-mapped files with 64-bit index (现在 ExSpan 使用 nint 索引的范围, 在64位操作系统上是64位的, 非常适合64位索引的内存映射文件).</p>
-<p>And this library also provides SafeBufferSpanProvider class to simplify this operation (而且本库还提供了 SafeBufferSpanProvider 类来简化这一操作).</p>
+<p>And this library also provides SafeBufferSpanProvider type to simplify this operation (而且本库还提供了 SafeBufferSpanProvider 类型来简化这一操作).</p>
 <ol>
 <li>Use CreateSpanProvider extension method to create SafeBufferSpanProvider based on SafeMemoryMappedViewHandle of memory mapped file (使用 CreateSpanProvider 扩展方法, 基于 内存映射文件的SafeMemoryMappedViewHandle 来创建 SafeBufferSpanProvider).</li>
 <li>SafeBufferSpanProvider supports using statement, which can automatically manage the release of unmanaged data (SafeBufferSpanProvider 支持 using 语句, 能自动管理非托管数据的释放).</li>
@@ -484,7 +484,25 @@ Apple M2, 1 CPU, 8 logical and 8 physical cores
 | SumForExSpanUsePtr | 262144 |  88.76 us | 0.596 us | 0.873 us |  0.93 |    0.01 |
 | SumForExSpanUseRef | 262144 |  89.04 us | 0.338 us | 0.506 us |  0.94 |    0.01 |
 </code></pre>
-<p>It can be seen that the performance of ExSpan is very similar to Span, slightly slower by about 20% This is because on the Arm architecture, JIT has special optimizations for Span (可见, ExSpan 的性能与 Span 很接近, 稍微慢了 20% 左右. 这是因为Arm架构上, JIT 对 Span 有特殊的优化).</p>
+<p>It can be seen that the performance of ExSpan is very similar to Span, slightly slower by about 26% (可见, ExSpan 的性能与 Span 很接近, 慢了 (121.74 / 96.30 - 1 =) 26% 左右).</p>
+<h4 id="net-9">.NET 9</h4>
+<pre><code>BenchmarkDotNet v0.14.0, macOS Sequoia 15.5 (24F74) [Darwin 24.5.0]
+Apple M2, 1 CPU, 8 logical and 8 physical cores
+.NET SDK 9.0.102
+  [Host]    : .NET 9.0.1 (9.0.124.61010), Arm64 RyuJIT AdvSIMD
+  MediumRun : .NET 9.0.1 (9.0.124.61010), Arm64 RyuJIT AdvSIMD
+
+| Method             | N      | Mean      | Error    | StdDev   | Ratio |
+|------------------- |------- |----------:|---------:|---------:|------:|
+| SumForArray        | 262144 |  86.25 us | 0.069 us | 0.103 us |  1.00 |
+| SumForPtr          | 262144 |  76.78 us | 0.335 us | 0.492 us |  0.89 |
+| SumForSpan         | 262144 |  93.34 us | 0.238 us | 0.326 us |  1.08 |
+| SumForExSpan       | 262144 | 104.89 us | 0.087 us | 0.131 us |  1.22 |
+| SumForExSpanByPtr  | 262144 | 104.72 us | 0.072 us | 0.105 us |  1.21 |
+| SumForExSpanUsePtr | 262144 |  78.05 us | 0.841 us | 1.259 us |  0.90 |
+| SumForExSpanUseRef | 262144 |  78.02 us | 0.854 us | 1.252 us |  0.90 |
+</code></pre>
+<p>The performance of .NET 9 has made progress again, and the performance of ExSpan is very close to Span The difference is only about 12% (.NET 9 时性能又有进度, ExSpan 的性能与 Span 很接近了. 仅相差 (104.89 / 93.34 - 1 =) 12% 左右).</p>
 <p>If you want to pursue optimal performance, you can also use pointers for optimization You can refer to SumForExSpanUsePtr or SumForExSpanUseRef, both of which are faster than SumForSpan (若想追求最佳性能, 也可利用指针进行优化. 可参考 SumForExSpanUsePtr 或 SumForExSpanUseRef, 它们都比 SumForSpan 快).</p>
 <h2 id="documentation-文档">Documentation (文档)</h2>
 <ul>
